; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_ptrace-utrace.c_ptrace_report_exit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_ptrace-utrace.c_ptrace_report_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.utrace_engine = type { i32 }
%struct.ptrace_context = type { i64 }

@current = common dso_local global %struct.TYPE_2__* null, align 8
@PTRACE_EVENT_EXIT = common dso_local global i32 0, align 4
@UTRACE_STOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.utrace_engine*, i64, i64*)* @ptrace_report_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ptrace_report_exit(i32 %0, %struct.utrace_engine* %1, i64 %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.utrace_engine*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64*, align 8
  %9 = alloca %struct.ptrace_context*, align 8
  store i32 %0, i32* %5, align 4
  store %struct.utrace_engine* %1, %struct.utrace_engine** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64* %3, i64** %8, align 8
  %10 = load %struct.utrace_engine*, %struct.utrace_engine** %6, align 8
  %11 = call %struct.ptrace_context* @ptrace_context(%struct.utrace_engine* %10)
  store %struct.ptrace_context* %11, %struct.ptrace_context** %9, align 8
  %12 = load %struct.ptrace_context*, %struct.ptrace_context** %9, align 8
  %13 = call i64 @ptrace_event_pending(%struct.ptrace_context* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %4
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @signal_group_exit(i32 %18)
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  br label %22

22:                                               ; preds = %15, %4
  %23 = phi i1 [ false, %4 ], [ %21, %15 ]
  %24 = zext i1 %23 to i32
  %25 = call i32 @WARN_ON(i32 %24)
  %26 = load %struct.ptrace_context*, %struct.ptrace_context** %9, align 8
  %27 = load i32, i32* @PTRACE_EVENT_EXIT, align 4
  %28 = call i32 @set_stop_code(%struct.ptrace_context* %26, i32 %27)
  %29 = load i64*, i64** %8, align 8
  %30 = load i64, i64* %29, align 8
  %31 = load %struct.ptrace_context*, %struct.ptrace_context** %9, align 8
  %32 = getelementptr inbounds %struct.ptrace_context, %struct.ptrace_context* %31, i32 0, i32 0
  store i64 %30, i64* %32, align 8
  %33 = load i32, i32* @UTRACE_STOP, align 4
  ret i32 %33
}

declare dso_local %struct.ptrace_context* @ptrace_context(%struct.utrace_engine*) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i64 @ptrace_event_pending(%struct.ptrace_context*) #1

declare dso_local i32 @signal_group_exit(i32) #1

declare dso_local i32 @set_stop_code(%struct.ptrace_context*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
